# simulife-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
android/: .gitignore  build_apk.sh  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  net.rs  persist.rs  sim.rs  tls.rs  world.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: app.rs  cell.wgsl  lib.rs  main.rs  net.rs  render.rs
docs/: android.md
scripts/: analyze-trace.sh  test-viewer-exit.sh
