[workspace]
resolver = "3"
members = ["crates/protocol", "crates/server", "crates/viewer"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
protocol = { path = "crates/protocol" }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"
anyhow = "1"
wgpu = "25"
winit = "0.30"
pollster = "0.4"
egui = "0.32"
egui-wgpu = "0.32"
egui-winit = "0.32"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = "0.7"
clap = { version = "4", features = ["derive"] }
zstd = { version = "0.13", features = ["zstdmt"] }
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
