[package]
name = "server"
edition.workspace = true
version.workspace = true

[dependencies]
protocol.workspace = true
serde.workspace = true
rmp-serde.workspace = true
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
zstd.workspace = true
rand.workspace = true
rand_chacha.workspace = true
