[package]
name = "viewer"
edition.workspace = true
version.workspace = true

[dependencies]
protocol.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
anyhow.workspace = true
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
rmp-serde.workspace = true
serde.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-chrome.workspace = true
clap.workspace = true
rand.workspace = true
