[package]
name = "viewer"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
protocol.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
anyhow.workspace = true
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
rmp-serde.workspace = true
serde.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
clap.workspace = true
tracing-chrome.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true, features = ["native-activity"] }
android_logger.workspace = true
log.workspace = true
winit = { workspace = true, features = ["android-native-activity"] }
